[package]
name = "sse-rabbitmq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sync-client"
path = "src/bin/client.rs"

[[bin]]
name = "sync-server"
path = "src/bin/server.rs"

[dependencies]
actix-web = "4"
actix-web-lab = "0.20.2"
env_logger = "0.11.1"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
time = "0.3.34"
tokio = "1.36.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.1"
rabbitmq-stream-client = "*"
config = "0.14.0"
futures = "0.3.17"
chrono = "0.4.34"
